--- a/boringtun-cli/Cargo.toml
+++ b/boringtun-cli/Cargo.toml
@@ -19,6 +19,13 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 tracing-appender = "0.2.2"
 
+[features]
+default = []
+jemalloc = ["jemallocator"]
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = { version = "0.5", optional = true }
+
 [dependencies.boringtun]
 version = "0.5.2"
 path = "../boringtun"
